# pw-2325-backend-i

1.20-03-2024/: two_sum.py
2.21-03-2024/: circle.py  rectangulo.py
2.21-03-2024/tests/: test_circle.py
aula10/: Dockerfile  pyproject.toml
aula10/api/: main.py
aula2/: circle.py  test_circle.py
aula3/: rectangle.py  sleeper.py  test_ce.py  test_rectangle.py
aula4/: Makefile  README.md  hello.py  pyproject.toml
aula4/src/: cli.py
aula5/: pyproject.toml
aula5/mylist/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula5/mylist/src/: cli.py  cli_list.txt
aula5/src/: run.py  test_cli.py
aula6/: Dockerfile  Makefile  README.md  pyproject.toml
aula6/eticbot/: app.py
aula7/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
aula7/eticgpt/: bot.py  client.py  models.py  run.py
dia2/: circle.py
discordbot/: primeiro_bot.py
