[tool.poetry]
name = "eticbot"
version = "0.1.0"
description = "eitc bot"
authors = ["jessiellen"]
license = "IMT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
py-cord = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
