[tool.poetry]
name = "aula7"
version = "0.1.0"
description = "eticGPT"
authors = ["jessie"]
license = "IMT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
py-cord = "^2.5.0"
requests = "^2.31.0"
pydantic = "^2.6.4"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
