[tool.poetry]
name = "mylist"
version = "0.1.0"
description = "Mylist"
authors = ["Jessiellen Souza"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "src/*.py" }
]


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
cli = cli:run'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
